--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,4 @@ pyrightconfig.json
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+Strategies/__pycache__/moving_average.cpython-313.pyc
